# miniPaste

./: .gitignore  LICENSE  README.md  editor.html  overlay.html  package-lock.json  package.json  pin.html  playwright.config.ts  settings.html  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: manual-test-checklist.md
docs/superpowers/plans/: 2026-05-12-minipaste-screenshot-tool.md  2026-05-13-floating-pin.md  2026-05-13-inline-capture.md  2026-05-14-autostart.md  2026-05-15-toolbar-out-of-bounds.md  2026-05-18-editor-tool-fixes.md  2026-05-18-move-selection-tool.md  2026-05-28-pencil-tool.md
docs/superpowers/specs/: 2026-05-12-minipaste-screenshot-tool-design.md  2026-05-13-floating-pin-design.md  2026-05-13-inline-capture-design.md  2026-05-14-autostart-design.md  2026-05-15-toolbar-out-of-bounds-design.md  2026-05-18-editor-tool-fixes-design.md  (+2 more)
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  pin.json
src-tauri/src/: error.rs  lib.rs  logging.rs  main.rs  state.rs
src-tauri/src/capture/: macos.rs  mod.rs  trigger.rs  windows.rs
src-tauri/src/clipboard/: macos.rs  mod.rs  windows.rs
src-tauri/src/config/: defaults.rs  mod.rs  model.rs  store.rs
src-tauri/src/fs/: filename.rs  mod.rs  save.rs
src-tauri/src/hotkey/: listener.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/ipc/: commands.rs
src-tauri/src/pin/: mod.rs  registry.rs  service.rs  text_to_image.rs
src-tauri/src/tray/: macos.rs  mod.rs  windows.rs
src-tauri/tests/: module_presence.rs
src/__tests__/: HotkeyRecorder.test.ts  findActiveScreen.test.ts  handles.test.ts  history.test.ts  magnifier.test.ts  pin.test.ts  selection.test.ts  toolbarPlacement.test.ts
src/shared/: Toast.vue  colors.ts  ipc.ts  toast.ts  types.ts
tests/e2e/: happy-path.spec.ts
(+28 files in other folders)
