[package]
name = "minipaste"
version = "0.1.0"
edition = "2021"

[lib]
name = "minipaste"
path = "src/lib.rs"

[[bin]]
name = "minipaste"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
