[package]
name = "minipaste"
version = "0.1.0"
edition = "2021"

[lib]
name = "minipaste"
path = "src/lib.rs"

[[bin]]
name = "minipaste"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
global-hotkey = "0.6"
crossbeam-channel = "0.5"
screenshots = "0.8"
arboard = "3"
image = "0.25"
dirs = "5"
chrono = "0.4"
base64 = "0.22"
ab_glyph = "0.2"

[target.'cfg(windows)'.dependencies]
clipboard-win = "5"

[dev-dependencies]
mockall = "0.13"
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# Optimize all dependencies even in dev profile. Our own crate stays at the dev
# default (fast compile, debuggable) but heavy crates like `image`, `flate2`,
# and `screenshots` get basic optimization — capture+png encode in dev mode
# drops from ~5s to under 1s on a 4K virtual desktop.
[profile.dev.package."*"]
opt-level = 1
